<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EcoRoute</string>
    <string name="title_home">Home</string>
    <string name="title_route">Dashboard</string>
    <string name="title_user">User</string>
    <string name="choose_start_location">Choose start location</string>
    <string name="choose_dst_location">Choose destination</string>
    <string name="recharges">SOC: %s. Plug Type: %s</string>
    <string name="select_car">Select Car</string>
    <string name="charge_slider_desc">Input the initial charge of the car</string>
    <string name="go">GO</string>
    <string name="charging">Charging Percentage: </string>
    <string name="title_activity_start_navigation">StartNavigationActivity</string>


    <!--    API and Interfaces-->
    <string name="mapbox_access_token">pk.eyJ1Ijoia2F2eWEtMjQiLCJhIjoiY2w2Y2xhc2JpMW80MjNrcDNuZ3hwdDVxNSJ9.yRixm6cK2FVMVYiBk8AbDw</string>
    <string name="tomtom_access_token">aDPKODZS35jvTep9pp35p4qULCJr6jvT</string>
    <string name="mapbox_directions_route">directions/v5/mapbox/%s/%s?geometries=%s&amp;access_token=%s</string>
    <string name="mapbox_isochrone_polygon">isochrone/v1/%s/%s?contours_meters=%s&amp;contours_colors=%s&amp;polygons=%s&amp;access_token=%s</string>
    <string name="mapbox_geocode_query">geocoding/v5/%s/%s?proximity=%s&amp;bbox=%s&amp;access_token=%s</string>
    <string name="mapbox_tilequry_query">v4/mapbox.mapbox-terrain-v2/tilequery/%s?&amp;access_token=%s</string>
    <string name="tomtom_ev_station_query">search/2/poiSearch/charging station.json?key=aDPKODZS35jvTep9pp35p4qULCJr6jvT&amp;limit=100&amp;countrySet=IN&amp;lat=%s&amp;lon=%s&amp;radius=%s</string>
    <string name="ev_geocode_query">coffee.json</string>
    <string name="driving_profile">mapbox/driving</string>

    <!--#Errors-->
    <string name="error_please_check_internet">Please check your internet connection</string>
    <string name="error_request_timed_out">Request timed out</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="direction_null">Directions not found</string>
    <string name="title_activity_tile_query">TileQueryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="isochrone_null">No surroundings found</string>
    <string name="geocode_query_null">No queired features of interest found</string>
    <string name="profileparams">%s U</string>
    <string name="vision_not_supported_message">Vision AR is not supported</string>
    <string name="vision_not_supported_title">Vision AR not found</string>
    <string name="car_age">Car Age (Years):</string>
    <string name="passengers">Num. of People:</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="car_type">Car Type</string>
    <string name="tesla">Tesla</string>
    <string name="ford">Ford</string>
    <string name="add_car">ADD CAR</string>
    <string name="cancel">CANCEL</string>
    <string name="charging_speed">Charging Speed</string>
    <string name="car_plug_type">Car Plug Type</string>
    <string name="choose_source">Choose Starting Point</string>
    <string name="select_car_type">Select Car Type</string>
    <string name="my_cars">My Cars</string>
    <string name="car_1">Car 1</string>
    <string name="demo_connector" tools:ignore="Typos">IEC60309AC1PhaseBlue</string>
    <string name="charging_percentage_20">Charging Percentage: 100%</string>
    <string name="petrol">Petrol</string>
    <string name="time">Time</string>
    <string name="energy">Energy</string>
    <string name="navigate">Navigate</string>
    <string name="select">SELECT</string>
    <string name="delete">DELETE</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_name">Car Name</string>
    <string name="connector">Connector</string>
    <string name="fast">Fast</string>
    <string name="normal">Normal</string>
    <string name="slow">Slow</string>
    <string name="mileage_miles">Mileage (miles)</string>
    <string name="age_days">Age (days)</string>
    <string name="battery_kwh">Battery (KwH)</string>
    <string name="select_connector">Select Connector</string>
    <string name="show_names">Show Names</string>


</resources>
