<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ecoroute.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_route"
        android:name="com.example.ecoroute.ui.route.RouteFragment"
        android:label="@string/title_route"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.ecoroute.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_navigation_user_to_addCarFragment"
            app:destination="@id/addCarFragment" />
    </fragment>
    <fragment
        android:id="@+id/addCarFragment"
        android:name="com.example.ecoroute.ui.user.AddCarFragment"
        android:label="fragment_add_car"
        tools:layout="@layout/fragment_add_car" />
</navigation>
