<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_half"
        tools:context=".ui.user.AddCarFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCarName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tilCarConnector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:padding="@dimen/space"
            android:text="@string/select_connector"
            android:textColor="@color/blue_light"
            app:layout_constraintTop_toBottomOf="@id/tilCarName" />

        <TextView
            android:id="@+id/tvConnectorList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:padding="@dimen/space"
            app:layout_constraintTop_toBottomOf="@id/tilCarConnector" />


        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvConnectorList">

            <RadioButton
                android:id="@+id/radio_fast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/fast" />

            <RadioButton
                android:id="@+id/radio_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/normal" />

            <RadioButton
                android:id="@+id/radio_slow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/slow" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCarAge"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            app:layout_constraintTop_toBottomOf="@id/rg2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age_days"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCarMileage"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            app:layout_constraintTop_toBottomOf="@id/tilCarAge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarMileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mileage_miles"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCarBattery"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            app:layout_constraintTop_toBottomOf="@id/tilCarMileage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarBattery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/battery_kwh"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/mtb_fill_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:text="@string/add_car"
            app:backgroundTint="@color/green_light"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toStartOf="@id/mtb_cancel_fill_car"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilCarBattery" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mtb_cancel_fill_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space"
            android:text="@string/cancel"
            app:backgroundTint="@color/red_light"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@id/mtb_fill_car"
            app:layout_constraintTop_toBottomOf="@id/tilCarBattery" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>