<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_2x">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.user.UserFragment">

        <TextView
            android:id="@+id/tvMyCars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/my_cars"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMyCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x"
            android:elevation="@dimen/space"
            android:padding="@dimen/space"
            app:cardBackgroundColor="#f0fff0"
            app:cardCornerRadius="@dimen/space"
            app:layout_constraintTop_toBottomOf="@id/tvMyCars">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space">

                <TextView
                    android:id="@+id/tvCarName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space"
                    android:text="@string/car_1"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCarConnector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space"
                    android:text="@string/demo_connector"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tvCarName" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>